// Vitest Snapshot v1

exports[`Component: EpicCellLayout > horizontal 1`] = `
<div>
  <div
    class="d-flex w-100 justify-content-between align-items-center"
  >
    horizontal
  </div>
</div>
`;

exports[`Component: EpicCellLayout > vertical 1`] = `
<div>
  <div
    class="d-flex flex-column w-100 h-100 justify-content-around"
  >
    vertical
  </div>
</div>
`;
